--- a/client/public/stylesheets/nav.css
+++ b/client/public/stylesheets/nav.css
@@ -1,27 +1,30 @@
-.app-container {
+/* .app-container {
   height: 100vh;
   width: 100vw;
-}
+} */
 
 .nav-container {
   display: flex;
   flex-direction: row;
-  align-content: space-between;
+  justify-content: space-around;
+  align-items: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 25px;
+  padding: 20px;
 }
 
-.nav-container a > img {
-  width: 100%;
-  
+.nav-container > * {
+  width: 220px;
 }
 
-.auth-nav-container > a, button {
+.nav-container img {
+  width: auto;
+}
+
+.auth-nav-container > a,
+  .auth-nav-container > button {
   font-size: 16px;
   border: none;
   color: #414b56;
   text-decoration: none;
-  margin: 16px;
+  margin-left: 16px;
 }
-
-
