--- a/client/public/stylesheets/products.css
+++ b/client/public/stylesheets/products.css
@@ -1,4 +1,15 @@
 .product-index-container {
   margin: 20px;
-  border: 2px solid #4CAF50;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
+
+.product-index-item {
+  list-style-type: none;
+  text-align: center;
+}
+
+
+
+
+
