--- a/client/public/stylesheets/nav.css
+++ b/client/public/stylesheets/nav.css
@@ -28,3 +28,23 @@
   text-decoration: none;
   margin-left: 16px;
 }
+
+.splash-container > img{
+  width: 100vw;
+  height: 100%;
+  background-size: cover;
+}
+
+.splash-container a {
+  position: absolute;
+  text-decoration: none;
+  color: #fff;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding-bottom: 5px;
+}
+
+.splash-container a:hover {
+  transition: all .25s;
+  border-bottom: 2px solid #fff;
+  transform: scaleX(1);
+}
