--- a/client/public/stylesheets/nav.css
+++ b/client/public/stylesheets/nav.css
@@ -30,11 +30,11 @@
 }
 
 .splash-container > img{
-  width: 100vw;
+  width: 80vw;
   height: 100%;
   background-size: cover;
 }
-
+/* 
 .splash-container a {
   position: absolute;
   text-decoration: none;
@@ -47,4 +47,4 @@
   transition: all .25s;
   border-bottom: 2px solid #fff;
   transform: scaleX(1);
-}
+} */
