Realign splash headers

--- a/client/public/stylesheets/nav.css
+++ b/client/public/stylesheets/nav.css
@@ -29,6 +29,7 @@
   margin-left: 16px;
 }
 
+/* SPLASH */
 .homepage-container {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   position: relative;
