--- a/client/public/stylesheets/nav.css
+++ b/client/public/stylesheets/nav.css
@@ -32,23 +32,39 @@
 /* SPLASH */
 .homepage-container {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  position: relative;
   text-align: center;
 }
 
+.splash-container {
+  position: relative;
+}
+
 .splash-container > img {
-  width: 80vw;
+  width: 100%;
   height: 100%;
 }
 
 .splash-container a {
   position: absolute;
-  left: 49%;
+  left: 48%;
   bottom: 5%;
-  padding-bottom: 5px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .splash-container a:hover {
   transition: all .25s;
   border-bottom: 2px solid #fff;
+}
+
+.homepage-container p {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 20px;
+  padding: 20px;
+}
+
+.homepage-sidenotes {
+  display: block;
 }
